fixed grid gap

--- a/style.css
+++ b/style.css
@@ -85,10 +85,10 @@ a:hover {
   min-height: 100%;
   min-width: 70%;
   display: grid;
+  align-items: center;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
-  justify-content: end;
-  gap: 1rem;
+  grid-template-rows: 0.7fr 1fr 0.7fr 1fr;
+  column-gap: 1rem;
 }
 .images {
   width: 70%;
@@ -102,7 +102,8 @@ a:hover {
 
 .aboutme {
   display: flex;
-  margin-left: 16rem;
+  position: absolute;
+  left: 25%;
   flex-direction: column;
   width: 50rem;
   height: 50rem;
@@ -126,8 +127,6 @@ a:hover {
 .head {
   grid-column: 1/4;
   width: 100%;
-  align-self: center;
-  justify-self: center;
 }
 .collate {
   z-index: 98;
